--- a/conf/app.ini
+++ b/conf/app.ini
@@ -4,15 +4,15 @@ RUN_MODE = dev
 [server]
 HTTP_PORT = 5000
 API_KEY = xsec.io||secdevops.cn
-NGINX_BIN = /usr/local/openresty/nginx/sbin/nginx
-NGINX_VHOSTS = /usr/local/openresty/nginx/conf/vhosts/
+NGINX_BIN = /www/server/nginx/nginx/sbin/nginx
+NGINX_VHOSTS = /www/server/panel/vhost/nginx/
 API_SERVERS = 127.0.0.1, 8.8.8.8
 
 [database]
-USER = waf-admin
-PASSWD = passw0rd
+USER = waf
+PASSWD = waf
 HOST = 127.0.0.1:3306
 NAME = waf
 
 [waf]
-RULE_PATH = /usr/local/openresty/nginx/conf/x-waf/rules/
+RULE_PATH = /www/server/nginx/x-waf/rules/
