--- a/conf/app.ini
+++ b/conf/app.ini
@@ -2,16 +2,16 @@ RUN_MODE = dev
 ;RUN_MODE = prod
 
 [server]
-HTTP_PORT = 5000
-API_KEY = xsec.io||secdevops.cn
-NGINX_BIN = /www/server/nginx/nginx/sbin/nginx
+HTTP_PORT = 5001
+API_KEY = xieyuhua2020
+NGINX_BIN = /www/server/nginx/sbin/nginx
 NGINX_VHOSTS = /www/server/panel/vhost/nginx/
-API_SERVERS = 127.0.0.1, 8.8.8.8
+API_SERVERS = 127.0.0.1
 
 [database]
 USER = waf
 PASSWD = waf
-HOST = 127.0.0.1:3306
+HOST = 192.168.9.22:3306
 NAME = waf
 
 [waf]
